--- a/code/Demographic_Nov16.Rmd
+++ b/code/Demographic_Nov16.Rmd
@@ -177,7 +177,6 @@ combined_data <- bind_rows(all_data)
 combined_data <- combined_data %>% st_drop_geometry()
 
 write.csv(combined_data, "../Data/Demographic_Nov16/all_year_maleRatio.csv", row.names = FALSE)
-print(combined_all_year_income)
 
 yearly_avg <- combined_data %>%
   group_by(year) %>%
@@ -208,19 +207,30 @@ print(tract_lines)
 belowPovertylevel_var <- "S1702_C02_001E"
 all_year_belowPovertylevel <- list()
 for (year in 2010:2019) {
-  S1702_table <- get_acs(
-      geography = "tract",
-      variables = belowPovertylevel_var,
-      year = year,
-      state = "CA",
-      county = "Los Angeles",
-      survey = "acs5",
-      output = "wide"
-    )
-  yearly_data <- left_join(LA_census_tracts, S1702_table, by = c("GEOID" = "GEOID"))
+  # S1702_table <- get_acs(
+  #     geography = "tract",
+  #     variables = belowPovertylevel_var,
+  #     year = year,
+  #     state = "CA",
+  #     county = "Los Angeles",
+  #     survey = "acs5",
+  #     output = "wide"
+  #   )
+  file_name <- paste0("../Data/S1702_poverty_line/ACSST5Y",year,".S1702-Data.csv")
+  S1702_table <- read.csv(file_path)
+  
+  S1702_table$GEOID <- sub(".*US", "", S1702_table$GEO_ID)
+  yearly_data <- S1702_table %>%
+    slice(-1) %>%
+    mutate(
+      lowerThanPovertyLine = !!sym(belowPovertylevel_var)
+      )%>%
+    select(GEOID, lowerThanPovertyLine)
+  
+  yearly_data <- left_join(LA_census_tracts, yearly_data, by = c("GEOID" = "GEOID"))
+  
   yearly_data <- yearly_data %>%
-    mutate(year = year,
-           lowerThanPovertyLine = S1702_C02_001E) %>%
+    mutate(year = year) %>%
     select(GEOID, year, lowerThanPovertyLine)
   all_year_belowPovertylevel[[as.character(year)]] <- yearly_data
   
@@ -281,7 +291,7 @@ print(tract_lines)
 Income_var <- c("S1901_C01_012E", "S1901_C01_013E")
 all_year_income <- list()
 for (year in 2010:2019) {
-  S1702_table <- get_acs(
+  S1901_table <- get_acs(
       geography = "tract",
       variables = Income_var,
       year = year,
@@ -290,13 +300,15 @@ for (year in 2010:2019) {
       survey = "acs5",
       output = "wide"
     )
-  yearly_data <- left_join(LA_census_tracts, S1702_table, by = c("GEOID" = "GEOID"))
+  yearly_data <- left_join(LA_census_tracts, S1901_table, by = c("GEOID" = "GEOID"))
   yearly_data <- yearly_data %>%
     mutate(year = year,
            median_income = S1901_C01_012E,
            mean_income = S1901_C01_013E) %>%
     select(GEOID, year, median_income, mean_income)
   all_year_income[[as.character(year)]] <- yearly_data
+  
+  write.csv(combined_all_year_income, paste("../Data/Demographic_Nov16/Year",year,"_income.csv"), row.names = FALSE)
   
   Median_map <- ggplot(data = yearly_data) +
     geom_sf(aes(fill = median_income), color = NA) + 
@@ -392,6 +404,8 @@ print(median_income_tract_lines)
 
 
 ```
+
+
 ```{r}
 # unempolyment rate
 
@@ -427,7 +441,6 @@ for (year in 2010:2019) {
   #     survey = "acs5",
   #     output = "wide"
   #   )
-  
   yearly_data <- left_join(LA_census_tracts, DP03_table, by = "GEOID")
   yearly_data <- yearly_data %>%
     mutate(
@@ -609,14 +622,16 @@ for (year in 2010:2019){
       survey = "acs5",
       output = "wide"
     )
+  
   MYB_yearly_data <- left_join(LA_census_tracts, MedianyearBuilt_table, by = c("GEOID" = "GEOID"))
   MYB_yearly_data <- MYB_yearly_data %>%
-    mutate(
-           year = year,
-           B25035_001E = ifelse(B25035_001E == "1939-", 1939, B25035_001E),  # 替换 "1939-" 为 1939
-           B25035_001E = ifelse(grepl("-", B25035_001E), NA, as.numeric(B25035_001E)), # 替换 "-" 为 NA 
-           MYB_ages = year - B25035_001E) %>%
-    select(GEOID, year, MYB_ages)
+  mutate(
+    year = year,
+    B25035_001E = ifelse(B25035_001E == 0, 1939, B25035_001E),
+    B25035_001E = ifelse(grepl("-", B25035_001E), NA, B25035_001E),
+    MYB_ages = ifelse(is.na(B25035_001E), NA, year - B25035_001E)
+  ) %>%
+  select(GEOID, year, MYB_ages)
   all_year_MYB[[as.character(year)]] <- MYB_yearly_data
 }
 combined_MYB_data <- bind_rows(all_year_MYB)
@@ -741,7 +756,7 @@ merged_data <- Reduce(function(x, y) full_join(x, y, by = c("GEOID", "year")), d
 final_data <- full_join(merged_data, YB, by = "GEOID")
 
 # Save the merged data to a new CSV file
-write.csv(merged_data, "../Data/Demographic_Nov16/merged_data.csv", row.names = FALSE)
+write.csv(final_data, "../Data/Demographic_Nov16/merged_data.csv", row.names = FALSE)
 
 message("Data merged successfully and saved to 'merged_data.csv'")
 ```
